fix(ios): bottom buttons padding on iPhone X

--- a/src/global.scss
+++ b/src/global.scss
@@ -16,3 +16,12 @@
   align-items: center;
   display: flex;
 }
+
+/* FAB with a button, bottom padding fix for ios devices */
+.ios {
+  .can-go-back {
+    ion-fab.fab-vertical-bottom {
+      bottom: 24px;
+    }
+  }
+}
